fixed alignment issues with submit text

--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ main {
 }
 
 .candidate-submit {
-    width: 100px; 
+
     margin: 0 auto; 
     margin-top: 30px;
     border: 1px solid #000; 
@@ -64,8 +64,7 @@ main {
 }
 
 
-.news-submit {
-    width: 100px; 
+.news-submit { 
     margin: 0 auto; 
     display: flex; 
     flex-direction: column;
@@ -79,21 +78,6 @@ main {
     display: block; 
      
 }
-
-/*.button {
-    width: 100px;
-    height: 30px;    
-    border-radius: 20px; 
-    box-shadow: 4px 4px 4px #000;
-    background-color: #1e2f5c;
-    color: #fff;
-    font-weight: bold;
-    font-size: 13px;
-    text-align: center;
-     
-}*/
-
-
 
 .button:hover {
     background-color: #3b5db6;
